fix java 17 changes and support